fix: update breakpoints for wide screen
The top/bottom waves shouldn't get cut off now (from 3000px to at least 3800px wide)

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -173,9 +173,9 @@ h6 {
     }
   }
 
-  @media only screen and (min-width: 3800px) {
+  @media only screen and (min-width: 3008px) {
     &::after {
-      bottom: -120px;
+      bottom: -150px;
     }
   }
 }
@@ -219,7 +219,7 @@ h6 {
     }
   }
 
-  @media only screen and (min-width: 3800px) {
+  @media only screen and (min-width: 3008px) {
     &::after {
       bottom: -80px;
       height: 450px;
@@ -243,7 +243,7 @@ h6 {
     }
   }
 
-  @media only screen and (min-width: 3800px) {
+  @media only screen and (min-width: 3008px) {
     &::after {
       height: 330px;
     }
@@ -267,7 +267,7 @@ h6 {
     }
   }
 
-  @media only screen and (min-width: 3800px) {
+  @media only screen and (min-width: 3008px) {
     &::after {
       bottom: -80px;
       height: 550px;
@@ -292,7 +292,7 @@ h6 {
     }
   }
 
-  @media only screen and (min-width: 3800px) {
+  @media only screen and (min-width: 3008px) {
     &::after {
       bottom: -80px;
       height: 550px;
@@ -318,7 +318,7 @@ h6 {
     }
   }
 
-  @media only screen and (min-width: 3800px) {
+  @media only screen and (min-width: 3008px) {
     &::after {
       bottom: -80px;
       height: 550px;
